--- a/apps/k-maps/src/app/core/layout/default-layout/default-header/default-header.component.html
+++ b/apps/k-maps/src/app/core/layout/default-layout/default-header/default-header.component.html
@@ -11,7 +11,13 @@
       <svg cIcon name="cilMenu" size="lg"></svg>
     </button>
     <div class="header-app-title">k-maps</div>
-    <c-header-nav class="ms-auto">
+    <c-header-nav class="ms-auto header-docs-nav">
+      <a
+        class="docs-link btn btn-white btn-sm me-2"
+        routerLink="/docs"
+        routerLinkActive="active">
+        Docs
+      </a>
       <ng-container *ngTemplateOutlet="userDropdown" />
     </c-header-nav>
 
