--- a/apps/k-maps/src/app/core/layout/default-layout/default-header/default-header.component.html
+++ b/apps/k-maps/src/app/core/layout/default-layout/default-header/default-header.component.html
@@ -13,10 +13,11 @@
     <div class="header-app-title">k-maps</div>
     <c-header-nav class="ms-auto header-docs-nav">
       <a
-        class="docs-link btn btn-white btn-sm me-2"
+        class="docs-link me-2"
         routerLink="/docs"
-        routerLinkActive="active">
-        Docs
+        routerLinkActive="active"
+        aria-label="Docs">
+        <span class="docs-icon" aria-hidden="true"></span>
       </a>
       <ng-container *ngTemplateOutlet="userDropdown" />
     </c-header-nav>
