--- a/apps/k-maps/src/app/features/docs/docs-detail/docs-detail.component.html
+++ b/apps/k-maps/src/app/features/docs/docs-detail/docs-detail.component.html
@@ -14,6 +14,7 @@
       </p>
     </header>
 
-    <section class="doc-body" [innerHTML]="html"></section>
+    <!-- 🔑 MARKDOWN RENDER TARGET -->
+    <section class="doc-body md-body" [innerHTML]="html"></section>
   </article>
 </div>
