--- a/apps/k-maps/src/app/features/docs/docs-list/docs-list.component.html
+++ b/apps/k-maps/src/app/features/docs/docs-list/docs-list.component.html
@@ -1,23 +1,16 @@
 <div class="docs-list">
-  <header class="docs-header">
-    <h3>Docs</h3>
-    <p class="docs-subtitle">Reference pages seeded from the markdown wiki.</p>
-  </header>
-
   <div *ngIf="loading" class="docs-loading">Loading docs…</div>
   <p *ngIf="!loading && error" class="docs-error">{{ error }}</p>
 
-  <ul *ngIf="!loading && !error" class="doc-items">
+  <ul *ngIf="!loading && !error && docs.length" class="doc-items">
     <li *ngFor="let doc of docs" class="doc-item">
       <a [routerLink]="['/docs', doc.slug]" class="doc-link">
-        <h3>{{ doc.title }}</h3>
+        <h6>{{ doc.title }}</h6>
       </a>
-      <p class="doc-meta">
-        <span class="doc-status">{{ doc.status }}</span>
-        <span *ngIf="doc.tags?.length">· {{ doc.tags.join(', ') }}</span>
-      </p>
     </li>
   </ul>
 
-  <p *ngIf="!loading && !error && !docs.length" class="docs-empty">No docs available yet.</p>
+  <p *ngIf="!loading && !error && !docs.length" class="docs-empty">
+    {{ searchTerm ? 'No docs match \"' + searchTerm + '\".' : 'No docs available yet.' }}
+  </p>
 </div>
