--- a/apps/k-maps/src/app/features/arabic/lessons/ar-lessons-page/ar-lessons-page.component.html
+++ b/apps/k-maps/src/app/features/arabic/lessons/ar-lessons-page/ar-lessons-page.component.html
@@ -57,7 +57,7 @@
                 <button class="btn btn-outline-info btn-sm me-1" (click)="study(row)">
                   Study
                 </button>
-                <button class="btn btn-outline-secondary btn-sm me-1" (click)="view(row.id)">
+                <button class="btn btn-outline-secondary btn-sm me-1" (click)="view(row.id, row.lesson_type)">
                   View
                 </button>
                 <button class="btn btn-primary btn-sm" (click)="edit(row)">
